don't require mta to be started

--- a/ec2-init.service
+++ b/ec2-init.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=EC2 Instance Initialization Script
-After=postfix.service
+After=network.target 
 
 [Service]
 ExecStart=/usr/bin/ec2-init.py
